hphp/test/zend/bad/ext-standard-general_functions/bug60227_3.php
<?php
header("X-foo: e\n foo");
header("X-Foo6: e\0Set-Cookie: ID=\n123\n d");
echo 'foo';
?>